@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST gnome-font-viewer-3.4.0.tar.xz 288116 SHA256 6311fc6e390b7ddfde4fbe5954452d0846a0b3991e9e52f179be3969e6033a76 SHA512 ed8e3330ae4753e423cb5a1c63f06114494d1ff82e53f89d807949285f1b08ed5ac2cb61e01df8fc6588698e92751f05fb7f2ac8ef20f6449329f68f694bfb6c WHIRLPOOL b6a871ead93164c489fe31583bedb2e4d8020f9e6bffb43867164072a5f809563bf85c38fa5a534f6ac90c094ff1e6309b99fcae5bbe1a4ed4ec0267b2b58c98
 DIST gnome-font-viewer-3.6.1.tar.xz 315408 SHA256 abe327b23f6f894361c0007e18eae5934f6c7f5f271970f6c70eb06693ce79c6 SHA512 d129f43c679298545f59c5a73afcf3b7cb081b993df2e8ebaf40e8864b98922f23453f98eb349f2c07eab7868cecb933ca59dc0d6234dd18a8915af85ed3a8df WHIRLPOOL c5537e8a22db39d3a2b3472b803c37a38564e8b3d2a02df82661ccf7c5aa421808fe250c97a513ac2ed83d77f5b37ef0d7354503599cabde6d37fda0287934b1
-EBUILD gnome-font-viewer-3.4.0.ebuild 999 SHA256 eed3991603765551a96c9a5a6d21a898a1da8ffc1a7d3d9d0630ca17cf095bab SHA512 4a963b33be2c4e61c211fdb0594a31ea84caa4d7e23394e49b56f9dc5262f9a896687fb59605f8b63d3d2965f38345b5cdbb9a901bfd9f4078ed166e562f5417 WHIRLPOOL 2cdd393b9c9f4f49119a0ce0817083e0dd1c365bc89768fd99807925c35bf69945707c090b5d95680202acf398dbdcc62f3bb3fa7bdd76f94cf56cf94d91d797
+DIST gnome-font-viewer-3.6.2.tar.xz 316068 SHA256 216a1f1a54cf662533b7a793b250bb01bafb98319bfdbe814f66be54fbefe145 SHA512 d3a8996e4dc690bb5dd93ca80239aae7325ac551c036d3f0f96ff9eed0ad03a014308261b08bd384675bf979bab5c1666d66511b4412bbffb16c4ab779b5ceab WHIRLPOOL 2b198d94f5d4a15b04b272702efc294bd0199eeba0a06c908cb68c9d22c195e8352be75c7dd9c2293288447589c9fd7c1fd5346ec99cd7b57c9bdeef7a0254ff
 EBUILD gnome-font-viewer-3.6.1.ebuild 988 SHA256 e1861e6f2359928e69bf8ff11ffe43caa7340a2c271c26ea8e2fb9bd6a70a2e6 SHA512 6c296097f0c30414bc775b2c26045b7141a5d63278f0774a1f7744cc3d3b0867e371dc439d23143896c9e522aee60891257200582309d646a054d3cd6c967f22 WHIRLPOOL b2efdbfe4c1c6b4ae658dc9c1166ee1cb7f28b2fc2af974f9edcfc57d018fc8aae11ec247f75d97afd1820772d249dfacae13660bbcdee2801abaa9cdc0ecb1b
-MISC ChangeLog 866 SHA256 81d28d778d046e479ba9a7335f99f9dc5b7201268e7338d312bab3d569b9a14c SHA512 c38aa0e51d8457b4e3dc8f2f841784d0276d7cabe1b670febdf0956154948cd800a96ee59855b86456f6493ed099a4281ecb898dc2684a3c813f66e6473c5311 WHIRLPOOL a003c8e9e48912b39515710d66cb9db85c094d66af199715b5a490c7a005a81f56d78f4c85a0f62c611448c69a745cba1f6127564fdf3f49a6be9b04eb0b2716
+EBUILD gnome-font-viewer-3.6.2.ebuild 988 SHA256 90a8785f140f5af6541b16ae4b105094dd67e3c6a3116d5e09f221edfaff32b1 SHA512 91ab553d4305eede72747dd0c48a894ed0c307e113d3d7fc297e8ed68ba92e8560374179ffb22aae556a2414ab5119022d75dd972663569ebf87066c6d71ade8 WHIRLPOOL 481472de50a96064d801ac8918224daee672e909711a5a1f96f5e5bf2b917a03638357812be1e969a6fc11359cbb6fb8addda50a507f457963844661ea1dfd4a
+MISC ChangeLog 1045 SHA256 577b81778b22dd1b3d39a67e9513a6f12c35d7ba06a86faff91e2b0c1309667d SHA512 7abb8f0260fd4da3bd1b232e5389ecfdeff8f4c51ad6b5ee5cbd9375a10fe15b6fde06a4c2aa99f40834319ff5cbf77dbb321cbc10e651d8ac41d45334f7a54a WHIRLPOOL 5b5afafa99b963fe94c06350b93f6a4469ba1b092c297ec00b6ac50e36fee5899ff675ba44e63232e04f13afbfb589525f003709af1c6d0c7609ef5a0e107e33
 MISC metadata.xml 160 SHA256 4d793ecb79b17794248102d8409d16bc27b1022c72038bd2d1241e129693d5f2 SHA512 677650c05f31fc27035e12f3f5e4b095715dfe12d2d3483f800bfbc6e986a98dbb1997cd52ad7a177b5c120c9b87fe5a2452a4f0f9852ac9a58262e0c5d576c9 WHIRLPOOL 070602fb27fee6a25035c9e93f5c2422270a5781fd11dac318d3f5c32cf9e49163abf7999729df230d3e181b6a1362982744e1f0ac016bf59a3458ae23abbb83
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDXoYwACgkQ1fmVwcYIWAYrGQCfTavUaSP2GXe7i/3sfpyPoINU
-378AoILR/2ME+78NNH2qCxRF4i9UXYA/
-=WU6g
+iEYEAREIAAYFAlEDDNUACgkQ1fmVwcYIWAb0PwCfUj0bRpEHKMCYBtIfTowKVo5Y
+uQYAoLUypLKIdJyb3nFaR0kV5JHaWKKx
+=NWWJ
 -----END PGP SIGNATURE-----
