@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/gnome-font-viewer
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gnome-font-viewer/ChangeLog,v 1.3 2012/12/24 00:27:54 eva Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gnome-font-viewer/ChangeLog,v 1.4 2013/01/25 22:53:08 eva Exp $
+
+*gnome-font-viewer-3.6.2 (25 Jan 2013)
+
+  25 Jan 2013; Gilles Dartiguelongue <eva@gentoo.org>
+  -gnome-font-viewer-3.4.0.ebuild, +gnome-font-viewer-3.6.2.ebuild:
+  Version bump.
 
 *gnome-font-viewer-3.6.1 (24 Dec 2012)
 
